Fix Headers mutation with "request-no-cors" guard

https://github.com/whatwg/fetch/pull/833

Bug: 905677
Change-Id: Ie4141c2b900931ef88e7734cb152b6d28955999f
Reviewed-on: https://chromium-review.googlesource.com/c/1352075
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Commit-Queue: Yutaka Hirano <yhirano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616230}
Former-commit-id: 3efffa04307d986a65a317170bdae835a49a2efe